# vamp-ir-proto2

./: Cargo.toml
src/: ast.rs  main.rs  synthesis.rs  transform.rs  typecheck.rs  vamp_ir.pest
tests/: bool.pir
